# CudaBatchedSolver

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  operations.h
cmake/: Config.cmake.in
cmake/compatibilityCUDA/: FindCUDA.cmake
src/CudaBatchedSolver/: CMakeLists.txt
src/sample/: CMakeLists.txt  example.c
